<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="36sp"
        android:fontFamily="@font/fat_font_2" />

    <TextView
        android:id="@+id/tv_aim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aim_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_play"
        android:layout_marginStart="16dp"
        android:textColor="@color/black_60"
        android:textSize="16sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_aim"
        app:layout_constraintBottom_toTopOf="@+id/btn_play_now"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="125dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:layout_marginBottom="100dp"/>

    <TextView
        android:id="@+id/btn_play_now"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/play_now"
        android:gravity="center"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:fontFamily="@font/fat_font_1"/>

</androidx.constraintlayout.widget.ConstraintLayout>