<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PlayActivity">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:tint="@color/orange" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="36sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/orange"
        android:fontFamily="@font/fat_font_1"/>

    <TextView
        android:id="@+id/tv_current_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_current_type"
        android:textColor="@color/black"
        android:layout_marginTop="3dp"
        android:textSize="16sp"/>

    <TextView
        android:text="@string/time"
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_difficulty"
        android:textColor="@color/black"
        android:fontFamily="@font/fat_font_1"
        android:textSize="32sp"/>



    <TextView
        android:id="@+id/tv_current_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/score_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_time"
        android:layout_marginTop="35dp"
        android:text="@string/current_question"
        android:gravity="center"
        android:textColor="@color/black_60"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="@font/fat_font_1"/>

    <FrameLayout
        android:id="@+id/layout_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_current_score">
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="125dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_current_score"
                android:layout_marginHorizontal="25dp"
                app:cardCornerRadius="20dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/yellow_30"
                android:id="@+id/cv_question_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_color_button_question_content"
                    android:gravity="center">

                    <TextView
                        android:layout_marginStart="30dp"
                        android:layout_marginHorizontal="25dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_content"
                        android:layout_gravity="center"
                        android:id="@+id/tvQuestionContent"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:paddingStart="30dp"
                        android:paddingHorizontal="15dp"/>

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


        </FrameLayout>

        <ImageView
            android:id="@+id/iv_current_type"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/science"
            android:scaleType="centerCrop"
            android:paddingEnd="50dp"
            android:paddingTop="15dp" />
        
        
    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_ans_a"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/layout_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="48dp"
        app:cardCornerRadius="15dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/ocean">

        <LinearLayout
            android:id="@+id/ln_ans_a"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ocean_70"
            android:gravity="center">

            <TextView
                android:id="@+id/answer_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/current_ans_a"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"/>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_ans_b"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/cv_ans_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="48dp"
        app:cardCornerRadius="15dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/ocean">

        <LinearLayout
            android:id="@+id/ln_ans_b"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ocean_70"
            android:gravity="center">

            <TextView
                android:id="@+id/answer_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/current_ans_b"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"/>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_ans_c"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/cv_ans_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="48dp"
        app:cardCornerRadius="15dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/ocean">

        <LinearLayout
            android:id="@+id/ln_ans_c"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ocean_70"
            android:gravity="center">

            <TextView
                android:id="@+id/answer_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/current_ans_c"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"/>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_ans_d"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/cv_ans_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="48dp"
        app:cardCornerRadius="15dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/ocean">

        <LinearLayout
            android:id="@+id/ln_ans_d"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ocean_70"
            android:gravity="center">
            <TextView
                android:id="@+id/answer_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/current_ans_d"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"/>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/sp_fifty_fifty"
        android:layout_width="80dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/cv_ans_d"
        android:layout_marginTop="24dp"
        android:src="@drawable/sp_fifty_fifty"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="44dp"/>

    <ImageView
        android:id="@+id/sp_bot"
        android:layout_width="80dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/cv_ans_d"
        android:layout_marginTop="24dp"
        android:src="@drawable/sp_bot"
        app:layout_constraintStart_toEndOf="@id/sp_fifty_fifty"
        android:layout_marginStart="36dp"/>

    <ImageView
        android:id="@+id/sp_call"
        android:layout_width="80dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/cv_ans_d"
        android:layout_marginTop="24dp"
        android:src="@drawable/sp_call"
        app:layout_constraintStart_toEndOf="@id/sp_bot"
        android:layout_marginStart="36dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>