<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/user_name"
        app:startIconDrawable="@drawable/ic_person"
        app:counterMaxLength="20"
        app:counterEnabled="true"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/ocean"
        app:boxStrokeErrorColor="@color/red"
        android:id="@+id/layout_edt_user"
        app:helperTextTextColor="@color/ocean"
        app:startIconTint="@color/ocean"
        android:textColorHint="@color/ocean">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ed_user_name"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_ed_password"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_edt_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/user_name"
        app:startIconDrawable="@drawable/ic_lock"
        app:counterMaxLength="12"
        app:counterEnabled="true"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="@color/ocean"
        app:boxStrokeErrorColor="@color/red"
        android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ed_password"
            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/layout_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_ed_password"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <TextView
            android:id="@+id/check_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_account"
            android:layout_marginTop="16dp"
            android:textColor="@color/black_60"
            android:textSize="16sp"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/check_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_now"
            android:layout_marginTop="16dp"
            android:textColor="@color/ocean"
            android:layout_marginStart="5dp"
            android:textSize="20dp" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="175dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_check"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ocean"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>